--- a/paper/local.tex
+++ b/paper/local.tex
@@ -25,6 +25,14 @@
 \newcommand\NONNEGREAL{\REAL^{{} \ge 0}}
 \newcommand\setfml{\mathbf{Fml}}
 \newcommand\trans{\delta}
+\newcommand\sol{x}
+\newcommand\DDT[1]{\frac{d{#1}}{dt}}
+\newcommand\ODE{\mathcal{D}}
+\newcommand\sem[1]{\left\llbracket{#1}\right\rrbracket}
+
+\newcommand\semtrue{\top}
+
+\newcommand\CONTIREACH[1]{\operatorname{\rightarrow_{\ODE,{#1}}}}
 
 %%% Local Variables:
 %%% mode: japanese-latex
